# AutonomousTerrarium

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  package-lock.json  package.json
CAD/solidworks_files/: Terrarium_glass_frame.SLDPRT  zbiornik_na_wodę.SLDPRT  złożenie_cały_projekt.SLDASM
client/src/: App.js  authContext.js  authService.js  index.js
client/src/components/: AutomaticSettingsPanel.js  CurrentState.js  EnvironmentSettingsForm.js  ManualControlPanel.js  ModeForm.js  NavBar.js  ReadingChart.js  ReadingControlPanel.js  ReadingStatusPanel.js  TerrariumHeader.js  TerrariumOverview.js
client/src/pages/: DashboardPage.js  LoginPage.js  ProfilePage.js  (+2 more)
embedded/: .gitignore  CMakeLists.txt  README.md
embedded/main/: CMakeLists.txt  config.h  shared_data.h
main/: CMakeLists.txt  config.h  main.c  shared_data.c  shared_data.h
main/control/: CMakeLists.txt  heater_control.c  pump_control.c
main/lcd/: CMakeLists.txt  lcd.c  lcd.h
main/led_strip/: CMakeLists.txt  led_task.c  led_task.h
main/network/: CMakeLists.txt  http_client.c  http_client.h  wifi.c  wifi.h
main/pid/: CMakeLists.txt
main/sensors/: CMakeLists.txt  sensor_temp_humidity.c  sensor_temp_humidity.h  water_level.c
main/unused/: led_rgb.c
main/unused/pid/: pid.c  pid.h
server/: index.js  package-lock.json  package.json
server/controllers/: animalController.js  authController.js  readingController.js  terrariumController.js
server/middleware/: authMiddleware.js
server/routes/: animals.js  readings.js  terrariums.js
solidworks_files/: LCD.SLDPRT  naprysk.SLDPRT
(+20 files in other folders)
